# fig2dev

./: CHANGES  COPYRIGHT  INSTALL  Imakefile  LATEX.AND.XFIG  Makefile  Makefile.am  Makefile.noimake  NOTES  PATCH1  README  configure.ac  copyright  genps.arrow.c  patch.imakefile  patchlevel.h  update-version_m4  version.m4
archlinux/: PKGBUILD
doc/: MAKEPS  fig2dev.1  fig2dev.ps  transfig.1  transfig.ps
doc/manual/: README  manual.tex  setup12.tex  trans.tex
fig2dev/: Imakefile  Makefile  Makefile.am  Makefile.noimake  Nmakefile  alloc.h  arrow.c  bound.c  bound.h  colors.c  colors.h  creationdate.c  creationdate.h  drivers.h  fig2dev.c  fig2dev.h  figure.h  free.c  free.h  getopt.c  iso2tex.c  latex_line.c  localmath.h  object.h  pi.h  psfonts.c  read.c  read.h  read1_3.c  strstr.c  trans_spline.c  trans_spline.h
fig2dev/bitmaps/: Makefile.am
fig2dev/dev/: Imakefile  Makefile  Makefile.am  Makefile.noimake  Makefile.old  asc85ec.c  cs_CZ.ps  encode.c  genbitmaps.c  genbox.c  gencgm.c  gendxf.c  genemf.c  genemf.h  genepic.c  gengbx.c  genge.c  genibmgl.c  genlatex.c  genlatex.h  genmap.c  genmf.c  genmp.c  genpdf.c  genpic.c  genpict2e.c  genpictex.c  genps.c  genps.c.orig  genps.h  genpstex.c  genpstk.c  genpstricks.c  genptk.c  genshape.c  gensvg.c  gentextyl.c  gentikz.c  gentk.c  gentpic.c  (+30 more)
fig2dev/i18n/: Makefile.am
fig2dev/lib/: malloc.c  realloc.c  strstr.c
fig2dev/tests/: Makefile.am  arrows_eps.at  bitmaps.at  input.at  lookup_X_color.at  output.at  pict2e.at  read.at  read_sanitize.at  test1.c  testsuite.at
fig2dev/tests/data/: arrows.eps  arrows.fig  fillswclip.svg.in  line.eps  line.fig  patterns.svg.in
man/: Makefile.am  fig2dev.1.in
transfig/: Imakefile  Makefile  Makefile.am  Makefile.noimake  fig2ps2tex.man  mkfile.c  pic2tpic.man  sys.c  transfig.c  transfig.h  transfig.man  txfile.c
transfig/doc/: manual.tex
